# rail_db

./: .gitignore  Procfile  README.md  advanced_demo.py  database.py  database_tests.py  fragility_equation_viewer - Copy.html  fragility_equation_viewer.html  import_student_data.py  main.py  pyproject.toml  railway.toml  requirements.txt  run_api.py  start.py  student_analysis.py  student_grades_viewer.html  test_queries.py  verify_project.py
api/: __init__.py  dependencies.py  main.py
api/models/: __init__.py  latex_models.py
api/routers/: __init__.py  analytics.py  students.py
api/routers/latex/: __init__.py  fragility.py
database/: __init__.py  analytics.py  connection.py  demo.py  student_data.py  student_utils.py  test_queries.py  tests.py
old_files/: betongrades.js
