[project]
name = "rail-db"
version = "0.1.0"
description = "PostgreSQL database connection with Railway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.scripts]
api = "uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload"
dev-api = "uvicorn api.main:app --host 127.0.0.1 --port 8000 --reload"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]
